# wechat-sdk

./: .gitignore  Cargo.toml  README.md
examples/: access_token.rs  accesstoken.rs  code2session.rs  msg_sec_check.rs
src/: client.rs  error.rs  lib.rs  main.rs  wechat.rs
src/wechat/: check.rs  login.rs  token.rs
