[package]
name = "WeChat-Api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
num-traits = "0.2"
