[package]
name = "wechat-sdk"
version = "0.1.0"
edition = "2018"
readme = "README.md"
keywords = ["wechat", "sdk"]
categories = ["api-bindings", "web-programming"]
license = "GPLv3"
repository = "https://github.com/SIT-Yiban/wechat-sdk"
description = "微信小程序 SDK, 参考文档: https://developers.weixin.qq.com/miniprogram/dev/api-backend/"


[[example]]
name = "code2session"
path = "examples/code2session.rs"


[dependencies]
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }